test DemoApplication booting pages astrology